(rule
 (targets c_flags.sexp
          c_library_flags.sexp
          ccopts.sexp)
  (deps    ../configurator/discover.exe)
  (action  (run %{deps})))

(library
 (name        GstEditingServices)
  (public_name gi-gst-editing-services)
  (libraries ctypes ctypes.foreign gi-glib2 gi-gstreamer gi-gst-controller)
  (c_names         dyn_load_constants_stubs)
  (c_flags         (:include c_flags.sexp))
  (c_library_flags (:include c_library_flags.sexp))
  (flags -open GLib -open Gstreamer -open GstController)
  (ocamlopt_flags (-ccopt (:include ccopts.sexp)))
 )
